# crabot

./: .gitignore  .prettierignore  .prettierrc.js  Cargo.toml  Makefile  README.md  build.rs  bun.lockb  index.js  package.json  tailwind.config.js  tsconfig.json
assets/: tailwind.css
js/: index.js
js/htmx/: index.js  sse-trigger.js
src/: main.rs  model.rs  template.rs
src/models/: gpt.rs  lorem.rs  mistral.rs  mod.rs
src/router/: index.rs
src/utils/: sse.rs
templates/elements/: message.html
templates/pages/: _base.html  index.html
