[package]
name = "crabot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
askama = "0.12.1"
axum = { version = "0.7.4", features = ["tracing", "ws"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.3" }
candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.3.3" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.3" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.3.3" }
clap = { version = "4.4.18", features = ["derive"] }
dotenv = "0.15.0"
fake = { version = "2.9.2", features = ["derive"] }
futures = "0.3.30"
headers = "0.4.0"
hf-hub = "0.3.2"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["serde_derive"] }
serde_json = "1.0.111"
tokenizers = "0.15.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
tower-http = { version = "0.5.1", features = ["trace", "fs"] }
tower-livereload = "0.9.1"
tracing = "0.1.40"
tracing-chrome = "0.7.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ureq = "2.9.1"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
